Make collection deprecated update-able #129 (#107)
Add PUT operation to `/collections` endpoint for updating a Collection's deprecated state.
