# galaxy_api/api/v3/serializers.py
@@ -5,6 +5,14 @@ from rest_framework import serializers
 from galaxy_api.api.utils import parse_collection_filename
 
 
+class CollectionSerializer(serializers.Serializer):
+
+    name = serializers.CharField(required=True)
+    namespace = serializers.CharField(required=True)
+
+    deprecated = serializers.BooleanField(required=False)
+
+
 class CollectionUploadSerializer(serializers.Serializer):
     """
     A serializer for the Collection One Shot Upload API.
