# galaxy_api/api/v3/viewsets.py
@@ -20,20 +20,22 @@ from django.core.exceptions import ValidationError
 from django.http import StreamingHttpResponse, HttpResponseRedirect
 from rest_framework import views
 from rest_framework.exceptions import APIException, NotFound
+from rest_framework.generics import get_object_or_404
 from rest_framework.response import Response
 from rest_framework import viewsets
 from rest_framework.settings import api_settings
 
 from galaxy_api.api.models import Namespace
-from galaxy_api.api.v3.serializers import CollectionUploadSerializer
+from galaxy_api.api.v3.serializers import CollectionSerializer, CollectionUploadSerializer
 from galaxy_api.common import pulp
 from galaxy_api.api import permissions, models
 
-import logging
-log = logging.getLogger(__name__)
-
 
 class CollectionViewSet(viewsets.GenericViewSet):
+    permission_classes = api_settings.DEFAULT_PERMISSION_CLASSES + \
+        [permissions.IsNamespaceOwnerOrPartnerEngineer]
+
+    serializer_class = CollectionSerializer
 
     def list(self, request, *args, **kwargs):
         self.paginator.init_from_request(request)
@@ -50,12 +52,38 @@ class CollectionViewSet(viewsets.GenericViewSet):
 
     def retrieve(self, request, *args, **kwargs):
         api = galaxy_pulp.GalaxyCollectionsApi(pulp.get_client())
+
         response = api.get(
             prefix=settings.API_PATH_PREFIX,
             namespace=self.kwargs['namespace'],
             name=self.kwargs['name']
         )
+
         return Response(response)
+
+    def update(self, request, *args, **kwargs):
+        namespace = self.kwargs['namespace']
+        name = self.kwargs['name']
+
+        namespace_obj = get_object_or_404(models.Namespace, name=namespace)
+        self.check_object_permissions(self.request, namespace_obj)
+
+        serializer = CollectionSerializer(data=request.data, context={'request': request})
+        serializer.is_valid(raise_exception=True)
+        data = serializer.validated_data
+
+        collection = galaxy_pulp.models.Collection(deprecated=data.get('deprecated', False))
+
+        api = galaxy_pulp.GalaxyCollectionsApi(pulp.get_client())
+
+        response = api.put(
+            prefix=settings.API_PATH_PREFIX,
+            namespace=namespace,
+            name=name,
+            collection=collection,
+        )
+
+        return Response(response.to_dict())
 
 
 class CollectionVersionViewSet(viewsets.GenericViewSet):
